fixed bug on navbar where icons where invisible and the searchbar was not displaying the magnifying glass icon properly, added navbar to agent dashboard and fixed a bug where React routes was not properly rendering the correct route after login, a user type variable was added to redirect the user to the corresponding dashboard based on the user type.

--- a/src/App.css
+++ b/src/App.css
@@ -29,3 +29,8 @@
     font-size: 14px;
     font-weight: bold;
 }
+
+.main-layout {
+    background-color: #fafafa;
+    min-height: 100vh;
+}
