--- a/src/components/Navbar.module.css
+++ b/src/components/Navbar.module.css
@@ -2,12 +2,14 @@
     background-color: #00796B;
     padding: 0 20px;
     height: 60px;
+    width: 100%;
     display: flex;
     align-items: center;
     justify-content: space-between;
-    position: sticky;
+    position: fixed;
     top: 0;
     z-index: 100;
+    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.4);
 }
 
 .navbar-logo {
@@ -55,17 +57,15 @@
 }
 
 .navbar > :nth-child(2) {
-    gap: 5px;
+    gap: 10px;
 }
 
 .box {
-    padding-left: 30px;
-    padding-right: 10px;
 }
 
 .icon {
-    width: 20px;
-    height: 20px;
+    height: 42px;
+    width: 42px;
     border: 2px solid transparent;
     padding: 10px;
     cursor: pointer;
