--- a/src/components/SearchBar.module.css
+++ b/src/components/SearchBar.module.css
@@ -4,7 +4,7 @@
 }
 
 .search-bar input {
-    width: 80%;
+    width: 100%;
     padding: 10px 40px 10px 10px;
     border: 1px solid #ccc;
     border-radius: 5px;
@@ -14,7 +14,7 @@
 .search-bar img {
     position: absolute;
     top: 50%;
-    right: 0;
+    right: 10px;
     transform: translateY(-50%);
     width: 20px;
     height: 20px;
